Add usage example

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 # TODO:
-
+Пояснение к использованию сервиса - нотификация
+Кнопка генерации случайной ссылки
 Сортировать массив ссылок по уникальности
 Проверка формата ссылки
 Автоматическое добавление протокола
@@ -8,6 +9,10 @@
 Тесты
 Readme с тщательным пояснением решения
 Heroku deployment
+Docker & Docker compose
+Скрипты запуска приложения
+Rubocop
 
 # DONE:
 Статус процессинга - вынести во view
+Добавить кликабельную ссылку
