--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,19 @@
 # TODO:
-Пояснение к использованию сервиса - нотификация
-Кнопка генерации случайной ссылки
-Сортировать массив ссылок по уникальности
+Обработка экспепшенов парсинга ссылок - запись статуса failed
+Тесты
+Отрефачить работу со статусами
 Проверка формата ссылки
 Автоматическое добавление протокола
-Обработка экспепшенов парсинга ссылок - запись статуса failed
 Использование Entity вместо хеша
-Тесты
 Readme с тщательным пояснением решения
-Heroku deployment
+Heroku deployment - fix DB issue
 Docker & Docker compose
 Скрипты запуска приложения
 Rubocop
 
 # DONE:
+Сортировать массив ссылок по уникальности
+Кнопка генерации случайной ссылки
+Пояснение к использованию сервиса - нотификация
 Статус процессинга - вынести во view
 Добавить кликабельную ссылку
