Use entities instead of hashes

--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,19 @@
 # TODO:
-Обработка экспепшенов парсинга ссылок - запись статуса failed
 Тесты
+Обработка конкрентных экспепшенов
 Отрефачить работу со статусами
 Проверка формата ссылки
 Автоматическое добавление протокола
-Использование Entity вместо хеша
 Readme с тщательным пояснением решения
 Heroku deployment - fix DB issue
 Docker & Docker compose
 Скрипты запуска приложения
 Rubocop
-Fix Ruby version
+Set exact Ruby version
 
 # DONE:
+Использование Entity вместо хеша
+Обработка экспепшенов парсинга ссылок - запись статуса failed
 Сортировать массив ссылок по уникальности
 Кнопка генерации случайной ссылки
 Пояснение к использованию сервиса - нотификация
